# SynthLauncher

./: Cargo.toml  README.md  SynthLauncher.code-workspace  compile.bat  meson.build  package.json  pnpm-lock.yaml  run.bat  run.sh  test.bat  test.sh
.github/workflows/: build-frontend.yml  build.yml
assets/: 13w21a.json  25w03a.json  argument.json  client_download.json  download.json  features.json  instances.json  javaversion.json  library_download.json  osrule.json  osrules.json  rule.json  version_manifest.json
assets/argument/: argument_1.json  argument_2.json  argument_3.json
assets/arguments/: arguments.json
assets/client_download/: client_download.json
assets/download/: download_2.json  download_3.json
assets/features/: features_1.json  features_2.json  features_3.json
assets/library_download/: library_download.json
assets/os_rules/: os_rules_1.json  os_rules_2.json  os_rules_3.json
assets/rule/: rule_1.json  rule_2.json  rule_3.json
assets/scripts/: ForgeInstaller.java  NeoForgeInstaller.java
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/config/: app.rs  config.rs  installations.json  installations.rs  java.rs  mod.rs
backend/src/java/: .TODO  java.rs  mod.rs
backend/src/java/installer/: download.rs  env.rs  installer.rs  mod.rs
backend/src/java/utils/: extracter.rs  mod.rs
backend/src/json/: client.rs  installations.rs  manifest.rs  mod.rs  version_manager.rs
backend/src/utils/: download.rs  errors.rs  zip.rs
crates/sl-core/: Cargo.toml
crates/sl-core/src/: accounts.rs  config.rs  environment.rs  forge.rs  installations.rs  instance.rs  instances.rs  java.rs  lib.rs
crates/sl-core/src/auth/: mod.rs
crates/sl-core/src/config/: config.rs  mod.rs
crates/sl-core/src/instances/: content_caching.rs  game.rs  instance_exporter.rs  instance_importer.rs  instance_metadata.rs  loaded_instance.rs  mod.rs
crates/sl-core/src/java/: jre_manifest.rs  mod.rs
crates/sl-core/src/json/: client.rs  jre_manifest.rs  manifest.rs  mod.rs  vanilla.rs  version_manifest.rs
crates/sl-core/src/launcher/: config.rs  instance.rs  instances.rs  java.rs  minecraft_version.rs  mod.rs  player_accounts.rs  player_profiles.rs
crates/sl-core/src/launcher/addons/: mod.rs
crates/sl-core/src/launcher/instances/: content_caching.rs  game.rs  instance.rs  instance_config.rs  instance_importer.rs  instance_metadata.rs  loaded_instance.rs  metadata.rs  mod.rs
crates/sl-core/src/launcher/player/: mod.rs  player_profile.rs  player_profiles.rs
crates/sl-core/src/launcher/profiles/: mod.rs
crates/sl-core/src/launcher/themes/: layout.rs  mod.rs  store_page.rs
crates/sl-core/src/loaders/: fabric.rs  forge.rs  mod.rs  neoforge.rs  quilt.rs
crates/sl-core/src/minecraft/: minecraft_version.rs  mod.rs  version_manifest.rs
crates/sl-core/src/profiles/: auth.rs  player.rs
crates/sl-frontend/: .prettierignore  .prettierrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
crates/sl-frontend/src/: App.css  App.tsx  App.vue  main.ts  main.tsx
crates/sl-frontend/src-tauri/: Cargo.toml  tauri.conf.json
crates/sl-frontend/src-tauri/capabilities/: default.json
crates/sl-frontend/src-tauri/icons/: icon.icns
crates/sl-frontend/src-tauri/src/: commands.rs  lib.rs  main.rs  running_instances.rs
crates/sl-frontend/src-tauri/src/command/: instances.rs  launcher.rs  mod.rs  store.rs
crates/sl-frontend/src-tauri/src/commands/: accounts.rs  instances.rs  launcher.rs  minecraft.rs  mod.rs  player_accounts.rs  profiles.rs  skins.rs  store.rs
crates/sl-frontend/src-tauri/src/core/: instances.rs  mod.rs  running_instances.rs  store.rs
crates/sl-frontend/src-tauri/src/instances/: commands.rs  mod.rs  progress.rs
crates/sl-java-manager/: Cargo.toml
crates/sl-java-manager/src/: java.rs  lib.rs
crates/sl-java-manager/src/installer/: extracter.rs  installer.rs  mod.rs
crates/sl-java-manager/src/jre_manifest/: installer.rs  mod.rs
crates/sl-meta/: Cargo.toml
crates/sl-meta/src/: lib.rs
crates/sl-mod-manager/: Cargo.toml
crates/sl-mod-manager/src/: modrinth.rs
crates/sl-omniarchive/src/: entry.rs
crates/sl-player/: Cargo.toml
crates/sl-player/src/: lib.rs  profile.rs
crates/sl-skin/: Cargo.toml
crates/sl-skin/src/: lib.rs
crates/sl-store/: Cargo.toml
crates/sl-store/src/: lib.rs  modrinth.rs
crates/sl-store/src/curseforge/: mod.rs  modpack.rs
crates/sl-store/src/curseforge/api/: mod.rs  project.rs  search.rs
crates/sl-store/src/modrinth/: dependencies.rs  mod.rs  modpack.rs  mrpack.rs
crates/sl-store/src/modrinth/api/: mod.rs  project.rs  search.rs
crates/sl-utils/: Cargo.toml
crates/sl-utils/src/: downloader.rs  errors.rs  fs.rs  lib.rs  log.rs  progress.rs  requester.rs  zip.rs
crates/sl-utils/src/utils/: download.rs  downloader.rs  errors.rs  fs.rs  log.rs  mod.rs  platform.rs  zip.rs
frontend/: .prettierignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
include/config/: app.hh  config.hh  java.hh
include/entities/: arch.hh  instance.hh  os.hh
include/http/: builder.hh  parser.hh
include/json/: assetindex.hh  client.hh  manifest.hh
include/utils/: httplib_utils.hh  rapidjson_utils.hh  simdjson_utils.hh
interface/: Cargo.toml
interface/src/: lib.rs
interface/src/json/: client.rs  manifest.rs  mod.rs  platform.rs
meta/: Cargo.toml
meta/src/: lib.rs
meta/src/json/: asset_index.rs  client.rs  mod.rs  platform.rs  version_manifest.rs
src/: cli.rs  main.cc  main.rs
src/config/: app.cc  config.cc  java.cc
src/entities/: arch.cc  instance.cc  os.cc
src/http/: builder.cc  parser.cc
src/json/: assetindex.cc  client.cc  manifest.cc
src/utils/: simdjson_utils.cc
test/: app.cc  arch.cc  dir.cc  http.cc  java.cc  os.cc
test/config/: app.cc  java.cc
test/entities/: arch.cc  instance.cc  os.cc
test/json/: assetindex.cc  client.cc  manifest.cc
test/utils/: httplib_utils.cc  rapidjson_utils.cc
(+159 files in other folders)
