[package]
name = "synthlauncher"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/sl-frontend/src-tauri", "crates/sl-meta", "crates/sl-utils", "crates/sl-core", "crates/sl-store"]

[dependencies]
sl-meta = { path = "crates/sl-meta" }
sl-utils = { path = "crates/sl-utils" }
sl-core ={ path = "crates/sl-core"}
sl-store = { path = "crates/sl-store" }

tokio = "1.45.1"
clap = { version = "4.5.39", features = ["derive"] } 
synrinth = "0.1.8"
reqwest = "0.12.20"
indicatif = "0.17.11"
