[package]
name = "synthlauncher-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
synthlauncher-meta = { path = "../meta" }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.97"
itertools = "0.14.0"
regex = "1.11.1"
which = "7.0.2"
lazy_static = "1.5.0"
bytes = "1.10.1"
reqwest = { version = "0.12.14", features = ["blocking", "json"]}
tokio = { version = "1.44.1", features = ["full"] }
