[package]
name = "synthlauncher-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
synthlauncher-meta = { path = "../meta" }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.97"
itertools = "0.14.0"
regex = "1.11.1"
which = "7.0.2"
lazy_static = "1.5.0"
bytes = "1.10.1"
reqwest = { version = "0.12.14", features = ["blocking", "json"]}
tokio = { version = "1.44.1", features = ["full"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
futures = "0.3.31"
velcro = "0.5.4"
zip = "2.5.0"
dirs = "6.0.0"
flate2 = "1.1.0"
tar = "0.4.44"
cfg-if = "1.0.0"
winreg = "0.55.0"
winapi = { version = "0.3", features = ["winuser"] }
tempfile = "3.19.1"
base64 = "0.22.1"
sha2 = "0.10"
rand = "0.9.0"
webbrowser = "1.0.4"
warp = "0.3"
thiserror = "2.0.12"
url = "2.5.4"
