[package]
name = "sl-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sl-meta = { path = "../sl-meta" }
sl-utils = { path = "../sl-utils" }
sl-java-manager = { path = "../sl-java-manager" }

serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5.0"
bytes = "1.10.1"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1.44.1", features = ["full"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
futures = "0.3.31"
velcro = "0.5.4"
cfg-if = "1.0.0"
chrono = "0.4.41"
thiserror = "2.0.12"
tempfile = "3.20.0"
strum = "0.27.1"
strum_macros = "0.27.1"
lzma-rs = "0.3.0"
config = "0.15.11"
base64 = "0.22.1"
zip = "4.0.0"
sha2 = "0.10.9"
hex = "0.4.3"
