[package]
name = "sl-java-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
which = "8.0.0"
sl-utils = { path = "../sl-utils" }
sl-meta = { path = "../sl-meta" }
reqwest = "0.12.22"
lzma-rs = "0.3.0"
futures-util = "0.3.31"
tokio = "1.46.1"
