[package]
name = "sl-store"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.22", features = ["json"] }
zip = "4.3.0"
tokio = "1.46.1"
futures-util = "0.3.31"

sl-core = { path = "../sl-core" }
sl-utils = { path = "../sl-utils" }
urlencoding = "2.1.3"
dashmap = "6.1.0"
chrono = "0.4.41"
tempdir = "0.3.7"
