[package]
name = "sl-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.14", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }

zip = "4.0.0"
regex = "1.11.1"
bytes = "1.10.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.45.0"
futures-util = "0.3.31"
synrinth = "0.1.3"