[package]
name = "synthlauncher-tauri-src"
version = "0.1.0"
description = "SynthLauncher"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
synthlauncher-backend = { path = "../../backend" }
tauri-plugin-opener = "2.2.6"
tauri-build = "2.0.6"
