[package]
name = "sl-frontend"
version = "0.1.0"
description = "SynthLauncher App"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sl_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
sl-core = { path = "../../sl-core" }
sl-store = { path = "../../sl-store"}
sl-utils = { path = "../../sl-utils" }
sl-player = { path = "../../sl-player" }
tokio = "1.46.1"

tauri = { version = "2.6.2", features = [] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-dialog = "2.3.0"
serde = "1.0.219"
serde_json = "1.0.140"
lazy_static = "1.5.0"
